Update Guide to web designing 1.html

--- a/Guide to web designing 1.html
+++ b/Guide to web designing 1.html
@@ -10,12 +10,15 @@
 <body style="background-color: lightblue; font-size: 30px;">
 <b style="font-size: 55px;"><i>Guide to Web Development</i></b>
 <pre>    <i><b>Table of Contents</b></i>
+    <a href="./content.html">Content..</a>
+    
 
-    1. Introduction
+   1. Introduction
     2. HTML Basic
     3. CSS Basic
     4. Jawa Scripts
     5. Conclusion
+
 
     <b><i>Introduction</i></b>
     The guid will walk you through the basic of web development.
