--- a/guide_to-web-designing.html
+++ b/guide_to-web-designing.html
@@ -11,7 +11,7 @@
 <body style="background-color: lightblue; font-size: 30px;">
 <b style="font-size: 55px;"><i>Guide to Web Development</i></b>
 <pre>    <i><b>Table of Contents</b></i>
-    <a href="./content.html">Content..</a>
+    <a href="./content.html">Content...</a>
     
 
    1. Introduction
